[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Xian Wu <xianwuusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
prometheus-fastapi-instrumentator = "^7.0.0"
pytest = "^8.3.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
